--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.2",
     "react-widgets": "^4.4.9",
+    "react-widgets-moment": "^4.0.25",
     "redux": "^4.0.1",
     "redux-form": "^8.1.0",
     "redux-thunk": "^2.3.0"
