--- a/package.json
+++ b/package.json
@@ -11,13 +11,12 @@
     "lightbox-react": "^0.3.7",
     "moment": "^2.24.0",
     "react": "^16.7.0",
+    "react-datepicker": "^2.0.0",
     "react-dom": "^16.7.0",
     "react-leaflet": "^2.1.4",
     "react-redux": "^6.0.0",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.2",
-    "react-widgets": "^4.4.9",
-    "react-widgets-moment": "^4.0.25",
     "redux": "^4.0.1",
     "redux-form": "^8.1.0",
     "redux-thunk": "^2.3.0"
